// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The CommercialCanaries stack matches the Australia CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Australia PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ap-southeast-2",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": Array [
          Object {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successPercent",
          },
          Object {
            "Id": "successPercentRaw",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "CanaryName",
                    "Value": "comm_cmp_canary_prod",
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ap-southeast-2/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ap-southeast-2",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ap-southeast-2/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ap-southeast-2:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ap-southeast-2",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-ap-southeast-2@guardian.co.uk",
        "Protocol": "email",
        "Region": "ap-southeast-2",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the Canada PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in ca-central-1",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": Array [
          Object {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successPercent",
          },
          Object {
            "Id": "successPercentRaw",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "CanaryName",
                    "Value": "comm_cmp_canary_prod",
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-ca-central-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-ca-central-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-ca-central-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:ca-central-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-ca-central-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-ca-central-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "ca-central-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the UK PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in eu-west-1",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": Array [
          Object {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successPercent",
          },
          Object {
            "Id": "successPercentRaw",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "CanaryName",
                    "Value": "comm_cmp_canary_prod",
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-eu-west-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-eu-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 2048,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-eu-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:eu-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-eu-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-eu-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "eu-west-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US CODE snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/CODE",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "CODE/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_code",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "1800",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_code-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_code-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+CODE-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "CODE",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;

exports[`The CommercialCanaries stack matches the US PROD snapshot 1`] = `
Object {
  "Metadata": Object {
    "gu:cdk:constructs": Array [],
    "gu:cdk:version": "TEST",
  },
  "Parameters": Object {
    "BuildId": Object {
      "Description": "The riff-raff build id, automatically generated and provided by riff-raff",
      "Type": "String",
    },
  },
  "Resources": Object {
    "Alarm7103F465": Object {
      "Properties": Object {
        "ActionsEnabled": true,
        "AlarmActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "AlarmDescription": "Either a Front or an Article CMP has failed in us-west-1",
        "AlarmName": "commercial-canary-PROD",
        "ComparisonOperator": "LessThanOrEqualToThreshold",
        "DatapointsToAlarm": 5,
        "EvaluationPeriods": 5,
        "Metrics": Array [
          Object {
            "Expression": "FILL(successPercentRaw, 0)",
            "Id": "expr_1",
            "Label": "successPercent",
          },
          Object {
            "Id": "successPercentRaw",
            "MetricStat": Object {
              "Metric": Object {
                "Dimensions": Array [
                  Object {
                    "Name": "CanaryName",
                    "Value": "comm_cmp_canary_prod",
                  },
                ],
                "MetricName": "SuccessPercent",
                "Namespace": "CloudWatchSynthetics",
              },
              "Period": 60,
              "Stat": "Average",
            },
            "ReturnData": false,
          },
        ],
        "OKActions": Array [
          Object {
            "Ref": "TopicBFC7AF6E",
          },
        ],
        "Threshold": 80,
        "TreatMissingData": "breaching",
      },
      "Type": "AWS::CloudWatch::Alarm",
    },
    "Canary": Object {
      "Properties": Object {
        "ArtifactS3Location": Object {
          "Fn::Join": Array [
            "",
            Array [
              "s3://cw-syn-results-",
              Object {
                "Ref": "AWS::AccountId",
              },
              "-us-west-1/PROD",
            ],
          ],
        },
        "Code": Object {
          "Handler": "pageLoadBlueprint.handler",
          "S3Bucket": Object {
            "Fn::Join": Array [
              "",
              Array [
                "cw-syn-canary-",
                Object {
                  "Ref": "AWS::AccountId",
                },
                "-us-west-1",
              ],
            ],
          },
          "S3Key": "PROD/nodejs.zip",
        },
        "DeleteLambdaResourcesOnCanaryDeletion": true,
        "ExecutionRoleArn": Object {
          "Fn::GetAtt": Array [
            "Role1ABCC5F0",
            "Arn",
          ],
        },
        "FailureRetentionPeriod": 31,
        "Name": "comm_cmp_canary_prod",
        "RunConfig": Object {
          "MemoryInMB": 3008,
          "TimeoutInSeconds": 60,
        },
        "RuntimeVersion": "syn-nodejs-puppeteer-7.0",
        "Schedule": Object {
          "DurationInSeconds": "0",
          "Expression": "rate(1 minute)",
        },
        "StartCanaryAfterCreation": true,
        "SuccessRetentionPeriod": 7,
        "Tags": Array [
          Object {
            "Key": "BuildId",
            "Value": Object {
              "Ref": "BuildId",
            },
          },
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::Synthetics::Canary",
    },
    "Role1ABCC5F0": Object {
      "Properties": Object {
        "AssumeRolePolicyDocument": Object {
          "Statement": Array [
            Object {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": Object {
                "Service": "lambda.amazonaws.com",
              },
            },
          ],
          "Version": "2012-10-17",
        },
        "Description": "CloudWatch Synthetics lambda execution role for running canaries",
        "ManagedPolicyArns": Array [
          "arn:aws:iam::aws:policy/CloudWatchSyntheticsFullAccess",
        ],
        "Policies": Array [
          Object {
            "PolicyDocument": Object {
              "Statement": Array [
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-canary-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:PutObject",
                    "s3:GetObject",
                    "s3:GetBucketLocation",
                    "s3:DeleteObject",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:s3:::cw-syn-results-",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        "-us-west-1/*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                    "logs:CreateLogGroup",
                  ],
                  "Effect": "Allow",
                  "Resource": Object {
                    "Fn::Join": Array [
                      "",
                      Array [
                        "arn:aws:logs:us-west-1:",
                        Object {
                          "Ref": "AWS::AccountId",
                        },
                        ":log-group:/aws/lambda/cwsyn-comm_cmp_canary_prod-*",
                      ],
                    ],
                  },
                },
                Object {
                  "Action": Array [
                    "s3:ListAllMyBuckets",
                    "xray:PutTraceSegments",
                  ],
                  "Effect": "Allow",
                  "Resource": "*",
                },
                Object {
                  "Action": "cloudwatch:PutMetricData",
                  "Condition": Object {
                    "StringEquals": Object {
                      "cloudwatch:namespace": "CloudWatchSynthetics",
                    },
                  },
                  "Effect": "Allow",
                  "Resource": "*",
                },
              ],
              "Version": "2012-10-17",
            },
            "PolicyName": "PolicyDocument",
          },
        ],
        "RoleName": "CloudWatchSyntheticsRole-comm_cmp_canary_prod-us-west-1",
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::IAM::Role",
    },
    "Subscription391C9821": Object {
      "Properties": Object {
        "Endpoint": "commercial.canaries+PROD-us-west-1@guardian.co.uk",
        "Protocol": "email",
        "Region": "us-west-1",
        "TopicArn": Object {
          "Ref": "TopicBFC7AF6E",
        },
      },
      "Type": "AWS::SNS::Subscription",
    },
    "TopicBFC7AF6E": Object {
      "Properties": Object {
        "Tags": Array [
          Object {
            "Key": "gu:cdk:version",
            "Value": "TEST",
          },
          Object {
            "Key": "gu:repo",
            "Value": "guardian/commercial-canaries",
          },
          Object {
            "Key": "Stack",
            "Value": "frontend",
          },
          Object {
            "Key": "Stage",
            "Value": "PROD",
          },
        ],
      },
      "Type": "AWS::SNS::Topic",
    },
  },
}
`;
